# cs148-project-2

./: .gitignore  FEATURES.md  README.md  augmentations.py  data_utils.py  dataset.py  evaluate.py  external_datasets.py  main.py  mixup.py  net.py  preprocess_data.py  pyproject.toml  requirements.txt  resnext.py  results.txt
notebooks/: CS148a_proj2_CNN_starter.ipynb  notebook.ipynb  pipeline.ipynb
src/digit_classifier/: __init__.py  __main__.py  augmentation.py  config.py  dataset.py  external.py  hub.py  inference.py  mixup.py  model.py  pipeline.py  preprocessing.py  sampler.py  splitting.py  training.py  visualize.py
tests/: test_external_dedup.py  test_mixup_disable.py  test_pipeline.py  test_restart_epochs.py  test_sampler.py  test_stats_include_externals.py
